[Monitoring] - ConnectinHistoryServiceTest 재정비 - ConnectionServiceTest 재정비 - ConnectHistoryResponse -> ConnectionHistoryResponse - HistoryService -> ConnectionHistoryService